force-app/main/default/objects/ASU_Alert_Messages__mdt/ASU_Alert_Messages__mdt.object-meta.xml
<CustomObject>
    <description>Configurable messages that can display alerts at the top of various pages.

Currently on used on the Help Tab</description>
    <label>ASU Alert Messages</label>
    <pluralLabel>ASU Alert Messages</pluralLabel>
</CustomObject>