force-app/main/default/objects/ASU_Alert_Messages__mdt/fields/Display_Message__c.field-meta.xml
<CustomField>
    <fullName>Display_Message__c</fullName>
    <businessOwnerGroup>Data_Owner_SSI</businessOwnerGroup>
    <description>The message that will be displayed on the page</description>
    <inlineHelpText>The message that will be displayed on the page.</inlineHelpText>
    <label>Display_Message</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>