force-app/main/default/objects/ASU_Alert_Messages__mdt/fields/End_Time__c.field-meta.xml
<CustomField>
    <fullName>End_Time__c</fullName>
    <description>The end time for the message to be displayed.</description>
    <inlineHelpText>The end time for the message to be displayed.</inlineHelpText>
    <label>End Time</label>
    <type>DateTime</type>
</CustomField>