force-app/main/default/objects/ASU_Alert_Messages__mdt/fields/Is_Active__c.field-meta.xml
<CustomField>
    <fullName>Is_Active__c</fullName>
    <businessOwnerGroup>Data_Owner_SSI</businessOwnerGroup>
    <defaultValue>false</defaultValue>
    <description>Whether the message will display or not</description>
    <inlineHelpText>Include or exclude message from display. Check to Include the message</inlineHelpText>
    <label>Is Active</label>
    <type>Checkbox</type>
</CustomField>