force-app/main/default/objects/ASU_Alert_Messages__mdt/fields/Priority__c.field-meta.xml
<CustomField>
    <fullName>Priority__c</fullName>
    <businessOwnerGroup>Data_Owner_SSI</businessOwnerGroup>
    <description>The display order for the messages</description>
    <inlineHelpText>Enter a number for priority sorting. Message with the lower number will sort higher on the page.</inlineHelpText>
    <label>Priority</label>
    <precision>18</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>