force-app/main/default/objects/ASU_Alert_Messages__mdt/fields/Start_Time__c.field-meta.xml
<CustomField>
    <fullName>Start_Time__c</fullName>
    <description>The start time for the message to be displayed.</description>
    <inlineHelpText>The start time for the message to be displayed.</inlineHelpText>
    <label>Start Time</label>
    <type>DateTime</type>
</CustomField>