force-app/main/default/objects/ASU_Alert_Messages__mdt/fields/Title__c.field-meta.xml
<CustomField>
    <fullName>Title__c</fullName>
    <description>Title of alert. This is shown in bold before the main body of the alert.</description>
    <inlineHelpText>Title of alert. This is shown in bold before the main body of the alert.</inlineHelpText>
    <label>Title</label>
    <length>255</length>
    <type>Text</type>
</CustomField>