force-app/main/default/objects/ASU_Alert_Messages__mdt/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <businessOwnerGroup>Data_Owner_SSI</businessOwnerGroup>
    <defaultValue>"warning"</defaultValue>
    <description>What type of alert message to show?  This controls the background color and icon for the alert.</description>
    <inlineHelpText>This controls the background color and icon for the alert. Warning = Orange background with a message bell icon; Info = Blue background with a info icon; Fatal = Red background with a error triangle icon; Confirm = Green background with a check mark icon; None = Orange background with a message bell icon.</inlineHelpText>
    <label>Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>warning</fullName>
                <default>true</default>
                <label>warning</label>
            </value>
            <value>
                <fullName>info</fullName>
            </value>
            <value>
                <fullName>fatal</fullName>
            </value>
            <value>
                <fullName>confirm</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>