force-app/main/default/objects/ASU_Alert_Messages__mdt/fields/Url__c.field-meta.xml
<CustomField>
    <fullName>Url__c</fullName>
    <businessOwnerGroup>Data_Owner_SSI</businessOwnerGroup>
    <description>A url to link people to in the message</description>
    <inlineHelpText>Optional Url for detailed information; Make sure to include http://</inlineHelpText>
    <label>Url</label>
    <length>255</length>
    <type>Text</type>
</CustomField>