force-app/main/default/objects/ASU_Alert_Messages__mdt/listViews/ASU_Alert_Messages.listView-meta.xml
<ListView>
    <fullName>ASU_Alert_Messages</fullName>
    <columns>MasterLabel</columns>
    <columns>Title__c</columns>
    <columns>Display_Message__c</columns>
    <columns>Url__c</columns>
    <columns>Start_Time__c</columns>
    <columns>End_Time__c</columns>
    <columns>Type__c</columns>
    <columns>Priority__c</columns>
    <columns>Is_Active__c</columns>
    <filterScope>Everything</filterScope>
    <label>*ASU Alert Messages</label>
</ListView>